# tradingbot_swing

./: .env.example  .gitignore  README.md  USAGE_KO.md  agent.py  pyproject.toml
src/ai_trading_agent/: alpaca.py  backtest.py  charting.py  cli.py  config.py  data.py  daytrade.py  daytrade_feedback.py  execution.py  features.py  macro.py  metrics.py  models.py  official_research.py  optimizer.py  paper.py  realtime.py  realtime_session.py  reporting.py  risk.py  strategy.py  swing.py  swing_research.py
tests/: test_strategy_and_risk.py
