[project]
name = "us-stock-ai-trading-agent"
version = "0.1.0"
description = "A conservative US stock research and paper trading agent."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
us-agent = "ai_trading_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
